--- a/test/Makefile
+++ b/test/Makefile
@@ -17,8 +17,8 @@ HomogeneousCharacteristicMatrixTest: ../Matrix.o ../CharacteristicMatrix.o
 CharacteristicMatrixTest: ../Matrix.o ../HomogeneousCharacteristicMatrix.o
 CapSimulationTest: ../TransducingLayer.o ../CharacteristicMatrix.o ../Matrix.o ../LaserBeam.o ../HomogeneousCharacteristicMatrix.o ../Exception.o ../CapMaterialInterface.o
 ../CapSimulation.o: ../DefaultCapMaterial.h ../CapMaterialInterface.h
+ImplantedDiamondTest: ../CapMaterialInterface.o ../TransducingLayer.o ../TrimFileVacancyConcentrationCalculator.o
 ThreadedCapSimulationRunnerTest: ../CapSimulation.o ../TransducingLayer.o ../CharacteristicMatrix.o ../Matrix.o ../LaserBeam.o ../HomogeneousCharacteristicMatrix.o ../Exception.o ../CapMaterialInterface.o
-ImplantedDiamondTest: ../CapMaterialInterface.o ../TransducingLayer.o
 
 stdafx.h.gch: stdafx.h
 	@g++ $(CPPFLAGS) -o $@ -c $^
